--- a/app/src/main/res/layout/cell_article_featured_image.xml
+++ b/app/src/main/res/layout/cell_article_featured_image.xml
@@ -1,27 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/featured_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/category_textView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:layout_alignBottom="@+id/featured_image"
-        android:background="@android:color/holo_red_light"/>
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/featured_image"
+        android:paddingBottom="12dp"
+        android:paddingLeft="@dimen/side_padding_text_cell">
 
-    <TextView
-        android:id="@+id/source_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:layout_alignParentBottom="true" />
+        <TextView
+            android:id="@+id/category_textView"
+            android:layout_width="120dp"
+            android:layout_height="25dp"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:textSize="@dimen/small_text_size"
+            android:background="@drawable/rectangle_shape" />
 
+        <TextView
+            android:id="@+id/source_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:gravity="center"
+            android:textSize="@dimen/small_text_size"
+            android:textColor="@color/white" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/caption_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:gravity="center"
+            android:textSize="@dimen/small_text_size"
+            android:textColor="@color/white"/>
+
+    </LinearLayout>
+
+</android.support.constraint.ConstraintLayout>
