--- a/app/src/main/res/layout/cell_article_title.xml
+++ b/app/src/main/res/layout/cell_article_title.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingLeft="@dimen/side_padding_text_cell"
+    android:paddingRight="30dp">
 
 
     <TextView
         android:id="@+id/article_title_textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
+        android:fontFamily="serif"
+        android:gravity="start"
         android:textStyle="bold"
-        android:gravity="left"
-        />
+        android:textColor="@color/black"
+        android:textSize="@dimen/article_title_font"
+        tools:layout_editor_absoluteX="15dp" />
 
 </android.support.constraint.ConstraintLayout>
