--- a/app/src/main/res/layout/cell_article_upper_title.xml
+++ b/app/src/main/res/layout/cell_article_upper_title.xml
@@ -2,14 +2,16 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/side_padding_text_cell"
-    android:paddingRight="@dimen/side_padding_text_cell">
+    android:paddingLeft="@dimen/side_padding_text_cell">
 
     <TextView
-        android:id="@+id/textView_item_article"
-        android:layout_width="match_parent"
+        android:id="@+id/upper_title_textView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/normal_text_size">
-    </TextView>
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:padding="@dimen/text_padding_dimension_cell"
+        />
 
 </android.support.constraint.ConstraintLayout>
