--- a/app/src/main/res/layout/cell_article_featured_image.xml
+++ b/app/src/main/res/layout/cell_article_featured_image.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -13,8 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/featured_image"
-        android:paddingBottom="12dp"
+        android:layout_alignParentBottom="true"
+        android:paddingBottom="6dp"
         android:paddingLeft="@dimen/side_padding_text_cell">
 
         <TextView
@@ -23,6 +23,7 @@
             android:layout_height="25dp"
             android:textColor="@color/white"
             android:gravity="center"
+            android:layout_marginTop="5dp"
             android:textSize="@dimen/small_text_size"
             android:background="@drawable/rectangle_shape" />
 
@@ -44,4 +45,4 @@
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
