--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="white">#ffffff</color>
-    <color name="black">#000000</color>
-    <color name="gray_color">#808080</color>
+    <color categoryName="colorPrimary">#3F51B5</color>
+    <color categoryName="colorPrimaryDark">#303F9F</color>
+    <color categoryName="colorAccent">#FF4081</color>
+    <color categoryName="white">#ffffff</color>
+    <color categoryName="black">#000000</color>
+    <color categoryName="gray_color">#808080</color>
 </resources>
