--- a/drg/src/main/res/values/dimens.xml
+++ b/drg/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="dp6">6dp</dimen>
+    <dimen categoryName="dp6">6dp</dimen>
 </resources>
