--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="small_text_size">16sp</dimen>
-    <dimen name="text_padding_dimension_cell">5dp</dimen>
+    <dimen name="text_padding_dimension_cell">5sp</dimen>
     <dimen name="article_title_font">30sp</dimen>
-    <dimen name="side_padding_text_cell">16dp</dimen>
-    <dimen name="normal_text_size">18dp</dimen>
-    <dimen name="divider_space_height">16dp</dimen>
+    <dimen name="side_padding_text_cell">16sp</dimen>
+    <dimen name="normal_text_size">18sp</dimen>
+    <dimen name="divider_space_height">16sp</dimen>
+    <dimen name="extra_small_font">12sp</dimen>
 </resources>
