categories recyclerView done

--- a/app/src/main/res/layout/cell_article_author_shares.xml
+++ b/app/src/main/res/layout/cell_article_author_shares.xml
@@ -11,7 +11,7 @@
     <View
         android:id="@+id/top_line"
         android:layout_width="wrap_content"
-        android:layout_height="0.5dp"
+        android:layout_height="1dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="@color/gray_color"
@@ -23,8 +23,8 @@
 
     <ImageView
         android:id="@+id/author_icon"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
         android:layout_marginBottom="6dp"
         android:layout_marginTop="6dp"
         android:src="@drawable/ic_author"
@@ -37,9 +37,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="6dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="6dp"
-        android:textSize="@dimen/small_text_size"
+        android:textSize="@dimen/extra_small_font"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/author_icon"
         app:layout_constraintTop_toTopOf="parent" />
@@ -49,17 +49,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="6dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginTop="6dp"
-        android:textSize="@dimen/small_text_size"
+        android:textSize="@dimen/extra_small_font"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/share_icon"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/share_icon"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
         android:layout_marginBottom="6dp"
         android:layout_marginTop="6dp"
         android:src="@drawable/ic_share"
@@ -70,7 +70,7 @@
     <View
         android:id="@+id/view2"
         android:layout_width="wrap_content"
-        android:layout_height="0.5dp"
+        android:layout_height="1dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="@color/gray_color"
