--- a/app/src/main/res/layout/cell_article_featured_image.xml
+++ b/app/src/main/res/layout/cell_article_featured_image.xml
@@ -12,36 +12,42 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_alignParentBottom="true"
+        android:orientation="vertical"
         android:paddingBottom="6dp"
         android:paddingLeft="@dimen/side_padding_text_cell">
 
         <TextView
             android:id="@+id/category_textView"
-            android:layout_width="130dp"
-            android:layout_height="25dp"
-            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="22dp"
+            android:paddingBottom="3dp"
+            android:paddingLeft="7dp"
+            android:paddingRight="8dp"
+            android:paddingTop="3dp"
+            android:background="@drawable/rectangle_shape"
+            android:fontFamily="@font/roboto"
             android:gravity="center"
-            android:layout_marginTop="5dp"
-            android:textSize="@dimen/small_text_size"
-            android:background="@drawable/rectangle_shape" />
+            android:textColor="@color/white"
+            android:textSize="@dimen/extra_small_font" />
 
         <TextView
             android:id="@+id/source_textView"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
+            android:fontFamily="@font/roboto"
             android:gravity="center"
-            android:textSize="@dimen/small_text_size"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textSize="@dimen/extra_small_font" />
 
         <TextView
             android:id="@+id/caption_textView"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
+            android:fontFamily="@font/roboto"
             android:gravity="center"
-            android:textSize="@dimen/small_text_size"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:textSize="@dimen/extra_small_font" />
 
     </LinearLayout>
 
