--- a/app/src/main/res/layout/cell_article_publication_date.xml
+++ b/app/src/main/res/layout/cell_article_publication_date.xml
@@ -26,7 +26,7 @@
         android:layout_marginBottom="6dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
-        android:textSize="@dimen/small_text_size"
+        android:textSize="@dimen/extra_small_font"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/clock_icon"
         app:layout_constraintTop_toTopOf="parent" />
