--- a/app/src/main/res/layout/cell_article_text.xml
+++ b/app/src/main/res/layout/cell_article_text.xml
@@ -9,6 +9,7 @@
         android:id="@+id/textView_item_article"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto"
         android:textSize="@dimen/normal_text_size">
     </TextView>
 
