--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffff</color>
-    <color name="black">#000000</color>
-    <color name="gray_color">#808080</color>
+    <color name="black">#DE000000</color>
+    <color name="gray_color">#C8C8C8</color>
+    <color name="red">#FFED1B24</color>
 </resources>
