--- a/app/src/main/res/layout/cell_title_home_page.xml
+++ b/app/src/main/res/layout/cell_title_home_page.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="37dp">
 
-    <TextView
-        android:id="@+id/category_name_home_page"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_slab"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:layout_height="37dp"
+        android:layout_marginLeft="16dp">
 
-    <View
+        <TextView
+            android:id="@+id/category_name_home_page"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_slab"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            />
+
+        <View
         android:layout_width="wrap_content"
         android:layout_height="3dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/red"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/category_name_home_page"
-        app:layout_constraintTop_toBottomOf="@+id/category_name_home_page">
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@id/category_name_home_page"
+        android:background="@color/red">
 
-    </View>
+         </View>
 
-</android.support.constraint.ConstraintLayout>
+    </RelativeLayout>
+
+
